--- a/config/crd/bases/secrets.hashicorp.com_vaultkubernetesauthbackends.yaml
+++ b/config/crd/bases/secrets.hashicorp.com_vaultkubernetesauthbackends.yaml
@@ -40,20 +40,12 @@ spec:
             description: VaultKubernetesAuthBackendSpec VaultAuthBackendSpec VaultAuthSpec
               defines the desired state of VaultKubernetesAuthBackendSpec
             properties:
-              PEMKeys:
-                description: PEMKeys Optional list of PEM-formatted public keys or
-                  certificates used to verify the signatures of Kubernetes service
-                  account JWTs. If a certificate is given, its public key will be
-                  extracted. Not every installation of Kubernetes exposes these keys.
-                items:
-                  type: string
-                type: array
-              disableISSValidation:
+              disableIssValidation:
                 default: false
                 description: DisableISSValidation Disable JWT issuer validation. Allows
                   to skip ISS validation.
                 type: boolean
-              disableLocalCAJWT:
+              disableLocalCaJwt:
                 default: false
                 description: DisableLocalCAJWT Disable defaulting to the local CA
                   cert and service account JWT when running in a Kubernetes pod.
@@ -64,7 +56,7 @@ spec:
                   issuer. See these instructions for looking up the issuer for a given
                   Kubernetes cluster.
                 type: string
-              kubernetesCACert:
+              kubernetesCaCert:
                 description: 'kubernetesCACert PEM encoded CA cert for use by the
                   TLS client used to talk with the Kubernetes API. NOTE: Every line
                   must end with a newline: \n if omitted will default to the content
@@ -82,6 +74,14 @@ spec:
               path:
                 description: Mount to use when authenticating to auth method.
                 type: string
+              pemKeys:
+                description: PEMKeys Optional list of PEM-formatted public keys or
+                  certificates used to verify the signatures of Kubernetes service
+                  account JWTs. If a certificate is given, its public key will be
+                  extracted. Not every installation of Kubernetes exposes these keys.
+                items:
+                  type: string
+                type: array
               vaultAuthRef:
                 description: VaultAuthRef of the VaultAuth resource If no value is
                   specified the Operator will default to the `default` VaultAuth,
