--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -75,6 +75,32 @@ rules:
 - apiGroups:
   - secrets.hashicorp.com
   resources:
+  - vaultauthbackends
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - secrets.hashicorp.com
+  resources:
+  - vaultauthbackends/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - secrets.hashicorp.com
+  resources:
+  - vaultauthbackends/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - secrets.hashicorp.com
+  resources:
   - vaultauths
   verbs:
   - create
